--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -10,10 +10,10 @@
 		<section id="nav-menu">
 			<nav class="container">
 				<ul id="menu">
-					<li id="menu"><a href="index.html" style="text-decoration:none">홈</a></li>
-					<li id="menu"><a href="aboutme.html" style="text-decoration:none">자기소개</a></li>
-					<li id="menu"><a href="photo.html" style="text-decoration:none">내사진</a></li>
-					<li id="menu"><a href="http://localhost:8080/aboutme/today" style="text-decoration:none">몇시예요</a></li>
+					<li id="menu" class="button"><a href="index.html" style="text-decoration:none">홈</a></li>
+					<li id="menu" class="button"><a href="aboutme.html" style="text-decoration:none">자기소개</a></li>
+					<li id="menu" class="button"><a href="photo.html" style="text-decoration:none">내사진</a></li>
+					<li id="menu" class="button"><a href="http://localhost:8080/aboutme/today" style="text-decoration:none">몇시예요</a></li>
 				</ul>
 			</nav>
 		</section>
