--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,10 +10,10 @@
 		<section id="nav-menu">
 			<nav class="container">
 				<ul id="menu">
-					<li id="menu"><a href="index.html" style="text-decoration:none">홈</a></li>
-					<li id="menu"><a href="aboutme.html" style="text-decoration:none">자기소개</a></li>
-					<li id="menu"><a href="photo.html" style="text-decoration:none">내사진</a></li>
-					<li id="menu"><a href="http://localhost:8080/aboutme/today" style="text-decoration:none">몇시예요</a></li>
+					<li id="menu" class="button"><a href="index.html" style="text-decoration:none">홈</a></li>
+					<li id="menu" class="button"><a href="aboutme.html" style="text-decoration:none">자기소개</a></li>
+					<li id="menu" class="button"><a href="photo.html" style="text-decoration:none">내사진</a></li>
+					<li id="menu" class="button"><a href="http://localhost:8080/aboutme/today" style="text-decoration:none">몇시예요</a></li>
 				</ul>
 			</nav>
 		</section>
@@ -22,11 +22,11 @@
 	<section id="nav-index">
 		<nav class="container">
 			<h1>웹프론트엔드 개발자~! 두익</h1>
-			함께 개발하고 같이성장하고 싶어요<br> 경기도 성남시 서현동 어딘가 살고 있어요!
+			함께 개발하고 같이 성장하고 싶어요<br> 경기도 성남시 서현동 어딘가 살고 있어요!
 
 			<ul id="content">
-				<li id="content">자기소개</li>
-				<li id="content">내사진</li>
+				<li id="content" class="button"><a href="aboutme.html" style="text-decoration:none">자기소개</a></li>
+				<li id="content" class="button"><a href="photo.html" style="text-decoration:none">내사진</a></li>
 			</ul>
 
 			<img src="img/map.PNG" alt="경기도 성남시 서현동 지도">
