--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -11,6 +11,7 @@ body {
 }
 
 header {
+	margin-top: 20px;
 	line-height: 50px;
 	background: white;
 	overflow: auto;
@@ -75,10 +76,10 @@ footer {
 <body>
 	<header>
 		<ul>
-			<li class="menu"><a href="index.html">홈</a></li>
-			<li class="menu"><a href="aboutme.html">자기소개</a></li>
-			<li class="menu"><a href="photo.html">내사진</a></li>
 			<li class="menu"><a href="index.html">몇시에요</a></li>
+			<li class="menu"><a href="photo.html">내사진</a></li>
+			<li class="menu"><a href="aboutme.html">자기소개</a></li>
+			<li class="menu"><a href="index.html">홈</a></li>
 		</ul>
 	</header>
 	<section id="main">
