--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -3,8 +3,123 @@
 <head>
 <meta charset="UTF-8">
 <title>사진 페이지</title>
+<style>
+body {
+	background: aqua;
+	height: 80%;
+}
+
+header {
+	margin-top: 20px;
+	line-height: 50px;
+	background: white;
+	overflow: auto;
+}
+
+.menu {
+	display: block;
+	float: right;
+	margin: 10px 10px 20px 10px;
+	background: olive;
+	width: 100px;
+	height: 50px;
+	text-align: center;
+	font-size: small;
+	box-shadow: 1px 1px 1px 1px gray;
+}
+
+#main {
+	height: 1600px;
+	background: white;
+	margin: 20px 0px;
+	text-align: center;
+	padding: 30px 0;
+	overflow: auto;
+}
+
+#first {
+	height: 600px;
+	background: pink;
+	margin: 70px 100px;
+}
+
+#second {
+	height: 600px;
+	background: green;
+	margin: 70px 100px;
+}
+
+.image {
+	margin-right: 70px;
+	margin-top: 140px;
+	border: 5px solid black;
+	border-color: gray;
+	float: left;
+	height: 300px;
+	width: 400px;
+}
+
+.content {
+	float: left;
+	margin-top: 150px;
+	text-align: left;
+}
+
+#foot {
+	padding: 10px;
+}
+
+.bot {
+	display: block;
+}
+
+footer {
+	margin: 10px 0;
+	height: 100px;
+	text-align: center;
+	background: white;
+}
+</style>
 </head>
 <body>
-
+	<header>
+		<ul>
+			<li class="menu"><a href="index.html">몇시에요</a></li>
+			<li class="menu"><a href="photo.html">내사진</a></li>
+			<li class="menu"><a href="aboutme.html">자기소개</a></li>
+			<li class="menu"><a href="index.html">홈</a></li>
+		</ul>
+	</header>
+	<section id="main">
+		<div id="first">
+			<div>
+				<img src="크롱.jpg" alt="과거" class="image">
+			</div>
+			<div class="content">
+				2001.03.11<br>
+				<br>제가 크롱일 때 찍은 사진입니다.<br>
+				<br>이 때는 뽀뽀로의 집에서 신나게 놀던 때 입니다.
+			</div>
+		</div>
+		<div id="second">
+			<div>
+				<img src="심슨.jpg" alt="현재" class="image">
+			</div>
+			<div class="content">
+				2010.03.11<br>
+				<br>결혼한 후에는 이런 모습이네요.<br>
+				<br>건강한 모습을 유지하고 있습니다.<br>
+				<br>지금도 행복합니다.
+			</div>
+		</div>
+	</section>
+	<footer>
+		<div id="foot">
+			<ul>
+				<li class="bot"><a href="giyong.kim@nts-corp.com">giyong.kim@nts-corp.com</a></li>
+				<li class="bot"><a href="http://github.kkygood3.io">http://github.kkygood3.io</a></li>
+			</ul>
+		</div>
+	</footer>
 </body>
 </html>
