--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="ko">
 	
 	<head>
 		<meta charset="utf-8">
@@ -12,7 +12,7 @@
 	
 	<body>
 		<!-- header -->
-		<header class="header">
+		<header>
 			<nav>
 				<ul class="nav_list">
 					<li class="nav_item">
@@ -32,28 +32,28 @@
 		</header>
 		
 		<!-- section -->
-		<section class="section">
+		<section>
 			<ul class="content_list">
 				<li class="content_item">
-					<h1 class="subject">이런 것을 잘해요?</h1>
-					<p class="description">
+					<h1>이런 것을 잘해요?</h1>
+					<p>
 						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries
 					</p>
 				</li>
 				<li class="content_item">
-					<h1 class="subject">나의 포트폴리오</h1>
-					<a class="link" href="www.naver.com">www.my.com</a>
-					<p class="description">
+					<h1>나의 포트폴리오</h1>
+					<a href="http://www.naver.com">www.naver.com</a>
+					<p>
 						제 홈페이지입니다. 이곳에서 많은 개발코드를 볼 수 있습니다.
 					</p>
-					<a class="link" href="www.naver.com">github.com/dooli</a>
-					<p class="description">
+					<a href="http://www.github.com">www.github.com</a>
+					<p>
 						제가 주로 개발하는 소스코드입니다. 이곳에서 많은 부분을 확인할 수 있습니다.
 					</p>
 				</li>
 				<li class="content_item">
-					<h1 class="subject">나의 최근 프로젝트 설명</h1>
-					<p class="description">
+					<h1>나의 최근 프로젝트 설명</h1>
+					<p>
 						제 최근 프로젝트를 설명하자면 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries
 					</p>
 				</li>
@@ -61,14 +61,14 @@
 		</section>
 		
 		<!-- footer -->
-		<footer class="footer">
-			<span class="footer_text_container">
+		<footer>
+			<div class="footer_text_container">
 				<p>
 					dooli@codesquad.kr
 					<br>
 					http://github.com/dooli
 				</p>
-			</span>
+			</div>
 		</footer>
 	</body>
 </html>
