--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="ko">
 	
 	<head>
 		<meta charset="utf-8">
@@ -12,7 +12,7 @@
 	
 	<body>
 		<!-- header -->
-		<header class="header">
+		<header>
 			<nav>
 				<ul class="nav_list">
 					<li class="nav_item">
@@ -32,7 +32,7 @@
 		</header>
 		
 		<!-- section -->
-		<section class="section">
+		<section>
 			<h1 class="greeting">웹프론트엔드 개발자~! dooli</h1>
 			<p class="description">
 				함께 개발하고 성장하고 싶어요.
@@ -41,26 +41,26 @@
 			</p>
 			<ul class="profile_list">
 				<li class="profile_list_item">
-					<p>자기소개</p>
+					<a href="aboutme.html">자기소개</a>
 				</li>
 				<li class="profile_list_item">
-					<p>내사진</p>
+					<a href="photo.html">내사진</a>
 				</li>
 			</ul>
-			<span class="map_image_container">
+			<div class="map_image_container">
 				<img src="https://developers.naver.com/inc/devcenter/images/mapjs-sample.png" alt="내위치지도">
-			</span>
+			</div>
 		</section>
 		
 		<!-- footer -->
-		<footer class="footer">
-			<span class="footer_text_container">
+		<footer>
+			<div class="footer_text_container">
 				<p>
 					dooli@codesquad.kr
 					<br>
 					http://github.com/dooli
 				</p>
-			</span>
+			</div>
 		</footer>
 	</body>
 </html>
