--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="ko">
 	
 	<head>
 		<meta charset="utf-8">
@@ -12,7 +12,7 @@
 	
 	<body>
 		<!-- header -->
-		<header class="header">
+		<header>
 			<nav>
 				<ul class="nav_list">
 					<li class="nav_item">
@@ -32,7 +32,7 @@
 		</header>
 		
 		<!-- section -->
-		<section class="section">
+		<section>
 			<ul class="content_list">
 				<li class="content_item">
 					<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQcPPu2UQtG7DmF1FlWro93aeCuNEws-3sIrjB9pcYOz149qFI" alt="둘리 어렸을 때 사진"/>
@@ -70,14 +70,14 @@
 		</section>
 		
 		<!-- footer -->
-		<footer class="footer">
-			<span class="footer_text_container">
+		<footer>
+			<div class="footer_text_container">
 				<p>
 					dooli@codesquad.kr
 					<br>
 					http://github.com/dooli
 				</p>
-			</span>
+			</div>
 		</footer>
 	</body>
 </html>
