--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -41,8 +41,8 @@
 		<article>
 			<h1>나의 포트폴리오</h1>
 			<p>
-				<a href='http://www.my.com'>www.my.com</a><br> 제 홈페이지 입니다. 이곳에서
-				많은 개발코드를 볼 수 있습니다. <br> <a href='http://www.github.com/crong'>github.com/crong</a><br>
+				<a href="http://www.my.com">www.my.com</a><br> 제 홈페이지 입니다. 이곳에서
+				많은 개발코드를 볼 수 있습니다. <br> <a href="http://www.github.com/crong">github.com/crong</a><br>
 				제가 주로 개발하는 소스코드 입니다. 이곳에서 많은 부분을 확인할 수 있습니다.<br>
 			</p>
 		</article>
